--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "package": "plasmo package"
   },
   "dependencies": {
+    "@douyinfe/semi-icons": "^2.56.1",
+    "@douyinfe/semi-illustrations": "^2.56.1",
+    "@douyinfe/semi-ui": "^2.56.1",
     "@plasmohq/storage": "^1.9.3",
     "jsqr": "^1.4.0",
     "otplib": "^12.0.1",
