--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "github-2fa",
   "displayName": "Github 2FA",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Easy GitHub 2FA authentication.",
   "author": "shisongyan. <songyan_shi@163.com>",
   "scripts": {
@@ -30,6 +30,10 @@
     "typescript": "5.3.3"
   },
   "manifest": {
+    "permissions": [
+      "tabs",
+      "contextMenus"
+    ],
     "host_permissions": [
       "https://*/*"
     ]
